# RiverSkyView

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: 1.1.1-开发工具手动路径配置实施方案.md  CLAUDE实施方案.md  前端界面设计方案.md  品牌资源与CLI会话恢复补充方案.md  实施进度.md  技术方案.md  整改与复验报告.md  江天一览 RiverSkyView 完整全套品牌资料.md  独立验收审计报告.md  界面问题分析报告-热力图空状态按钮与资料显示.md  第二期-编辑器IDE启动能力完整实施方案.md  第二期实施进度.md  第二期整改与复验报告.md  验收测试方案.md
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_editor_preferences.sql  0003_editor_installations.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: editor.rs  files.rs  mod.rs  project.rs  project_log.rs  settings.rs  terminal.rs  vault.rs
src-tauri/src/models/: editor.rs  files.rs  project.rs  project_log.rs  settings.rs  terminal.rs  vault.rs
src-tauri/src/repositories/: editor_installation_repository.rs  editor_preference_repository.rs  editor_profile_repository.rs  log_repository.rs  mod.rs  project_repository.rs  settings_repository.rs  vault_repository.rs
src-tauri/src/security/: dpapi.rs  mod.rs  path_guard.rs  redaction.rs
src-tauri/src/services/: editor_detection_service.rs  editor_installation_service.rs  editor_launch_service.rs  editor_target_service.rs  file_service.rs  instruction_file_service.rs  mod.rs  project_log_service.rs  project_service.rs  settings_service.rs  terminal_service.rs  vault_service.rs
src/__tests__/: EditorLaunchButton.test.ts  EditorSettingsPanel.test.ts  ProjectListView.test.ts  VaultPressReveal.test.ts  router.test.ts
src/api/: editor.ts  files.ts  index.ts  (+5 more)
(+30 files in other folders)
